crates/slate/tests/snapshots/stdio_gets_loop_unsupported.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn remove(_0: *const i8) -> i32;
    fn fopen(_0: *const i8, _1: *const i8) -> *mut libc::FILE;
    fn puts(_0: *const i8) -> i32;
    fn fputs(_0: *const i8, _1: *mut libc::FILE) -> i32;
    fn fclose(_0: *mut libc::FILE) -> i32;
    fn fgets(_0: *mut i8, _1: i32, _2: *mut libc::FILE) -> *mut i8;
    fn strlen(_0: *const i8) -> usize;
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut f: *mut libc::FILE = std::ptr::null_mut();
    let mut g: *mut libc::FILE = std::ptr::null_mut();
    let mut line: aligned::Aligned<aligned::A16, [i8; 64]> = aligned::Aligned([0; 64]);
    let mut count: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"slate_stdio_gets_loop_unsupported.tmp\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { remove(_v1 as *const i8) };
    let _v3: *mut i8 = b"slate_stdio_gets_loop_unsupported.tmp\0".as_ptr() as *mut i8;
    let _v4: *mut i8 = b"w\0".as_ptr() as *mut i8;
    let _v5: *mut libc::FILE = unsafe { fopen(_v3 as *const i8, _v4 as *const i8) };
    f = _v5;
    {
        let _v6: *mut libc::FILE = f;
        let _v7: bool = _v6 != std::ptr::null_mut();
        let _v8: bool = !_v7;
        if _v8 {
            let _v9: *mut i8 = b"open-fail\0".as_ptr() as *mut i8;
            let _v10: i32 = unsafe { puts(_v9 as *const i8) };
            let _v11: i32 = 0;
            __retval = _v11;
            let _v12: i32 = __retval;
            std::process::exit(_v12 as i32);
        }
    }
    let _v13: *mut i8 = b"one\n\0".as_ptr() as *mut i8;
    let _v14: *mut libc::FILE = f;
    let _v15: i32 = unsafe { fputs(_v13 as *const i8, _v14 as *mut libc::FILE) };
    let _v16: *mut i8 = b"two\n\0".as_ptr() as *mut i8;
    let _v17: *mut libc::FILE = f;
    let _v18: i32 = unsafe { fputs(_v16 as *const i8, _v17 as *mut libc::FILE) };
    let _v19: *mut libc::FILE = f;
    let _v20: i32 = unsafe { fclose(_v19 as *mut libc::FILE) };
    let _v21: *mut i8 = b"slate_stdio_gets_loop_unsupported.tmp\0".as_ptr() as *mut i8;
    let _v22: *mut i8 = b"r\0".as_ptr() as *mut i8;
    let _v23: *mut libc::FILE = unsafe { fopen(_v21 as *const i8, _v22 as *const i8) };
    g = _v23;
    {
        let _v24: *mut libc::FILE = g;
        let _v25: bool = _v24 != std::ptr::null_mut();
        let _v26: bool = !_v25;
        if _v26 {
            let _v27: *mut i8 = b"reopen-fail\0".as_ptr() as *mut i8;
            let _v28: i32 = unsafe { puts(_v27 as *const i8) };
            let _v29: i32 = 0;
            __retval = _v29;
            let _v30: i32 = __retval;
            std::process::exit(_v30 as i32);
        }
    }
    let _v31: i32 = 0;
    count = _v31;
    {
        loop {
            let _v32: *mut i8 = line.as_mut_ptr() as *mut i8;
            let _v33: i32 = 64;
            let _v34: *mut libc::FILE = g;
            let _v35: *mut i8 = unsafe { fgets(_v32 as *mut i8, _v33 as i32, _v34 as *mut libc::FILE) };
            let _v36: *mut core::ffi::c_void = std::ptr::null_mut();
            let _v37: *mut i8 = _v36 as *mut i8;
            let _v38: bool = _v35 != _v37;
            if !_v38 {
                break;
            }
            {
                let _v39: *mut i8 = line.as_mut_ptr() as *mut i8;
                let _v40: u64 = (unsafe { strlen(_v39 as *const i8) }) as u64;
                let _v41: i32 = _v40 as i32;
                let _v42: i32 = count;
                let _v43: i32 = _v42 + _v41;
                count = _v43;
            }
        }
    }
    let _v44: *mut libc::FILE = g;
    let _v45: i32 = unsafe { fclose(_v44 as *mut libc::FILE) };
    let _v46: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v47: i32 = count;
    let _v48: i32 = unsafe { printf(_v46 as *const i8, _v47) };
    let _v49: *mut i8 = b"slate_stdio_gets_loop_unsupported.tmp\0".as_ptr() as *mut i8;
    let _v50: i32 = unsafe { remove(_v49 as *const i8) };
    let _v51: i32 = 0;
    __retval = _v51;
    let _v52: i32 = __retval;
    std::process::exit(_v52 as i32);
}
