crates/slate/tests/snapshots/string_copy_fixup.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn strcpy(_0: *mut i8, _1: *const i8) -> *mut i8;
    fn strcat(_0: *mut i8, _1: *const i8) -> *mut i8;
    fn strncpy(_0: *mut i8, _1: *const i8, _2: usize) -> *mut i8;
    fn strncat(_0: *mut i8, _1: *const i8, _2: usize) -> *mut i8;
    fn printf(_0: *const i8, ...) -> i32;
    fn strlen(_0: *const i8) -> usize;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut copy: aligned::Aligned<aligned::A16, [i8; 16]> = aligned::Aligned([0; 16]);
    let mut append: aligned::Aligned<aligned::A16, [i8; 16]> = aligned::Aligned([0; 16]);
    let mut trunc_copy: aligned::Aligned<aligned::A16, [i8; 16]> = aligned::Aligned([0; 16]);
    let mut trunc_append: aligned::Aligned<aligned::A16, [i8; 16]> = aligned::Aligned([0; 16]);
    let _v0: i32 = 0;
    __retval = _v0;
    *copy = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
    *append = [102, 111, 111, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
    *trunc_copy = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
    *trunc_append = [112, 114, 101, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
    let _v1: *mut i8 = copy.as_mut_ptr() as *mut i8;
    let _v2: *mut i8 = b"abc\0".as_ptr() as *mut i8;
    let _v3: *mut i8 = unsafe { strcpy(_v1 as *mut i8, _v2 as *const i8) };
    let _v4: *mut i8 = append.as_mut_ptr() as *mut i8;
    let _v5: *mut i8 = b"bar\0".as_ptr() as *mut i8;
    let _v6: *mut i8 = unsafe { strcat(_v4 as *mut i8, _v5 as *const i8) };
    let _v7: *mut i8 = trunc_copy.as_mut_ptr() as *mut i8;
    let _v8: *mut i8 = b"abcdef\0".as_ptr() as *mut i8;
    let _v9: u64 = 3;
    let _v10: *mut i8 = unsafe { strncpy(_v7 as *mut i8, _v8 as *const i8, _v9 as usize) };
    let _v11: *mut i8 = trunc_append.as_mut_ptr() as *mut i8;
    let _v12: *mut i8 = b"suffix\0".as_ptr() as *mut i8;
    let _v13: u64 = 3;
    let _v14: *mut i8 = unsafe { strncat(_v11 as *mut i8, _v12 as *const i8, _v13 as usize) };
    let _v15: *mut i8 = b"%s %s %s %s %zu\n\0".as_ptr() as *mut i8;
    let _v16: *mut i8 = copy.as_mut_ptr() as *mut i8;
    let _v17: *mut i8 = append.as_mut_ptr() as *mut i8;
    let _v18: *mut i8 = trunc_copy.as_mut_ptr() as *mut i8;
    let _v19: *mut i8 = trunc_append.as_mut_ptr() as *mut i8;
    let _v20: *mut i8 = trunc_append.as_mut_ptr() as *mut i8;
    let _v21: u64 = (unsafe { strlen(_v20 as *const i8) }) as u64;
    let _v22: i32 = unsafe { printf(_v15 as *const i8, _v16, _v17, _v18, _v19, _v21) };
    let _v23: i32 = 0;
    __retval = _v23;
    let _v24: i32 = __retval;
    std::process::exit(_v24 as i32);
}
