crates/slate/tests/snapshots/string_param_lift.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn atoi(_0: *const i8) -> i32;
    fn strlen(_0: *const i8) -> usize;
    fn printf(_0: *const i8, ...) -> i32;
}

fn parse_num(arg2: *mut i8) -> i32 {
    let mut s: *mut i8 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    s = arg2;
    let _v0: *mut i8 = s;
    let _v1: i32 = unsafe { atoi(_v0 as *const i8) };
    __retval = _v1;
    let _v2: i32 = __retval;
    return _v2;
}

fn forward_num(arg1: *mut i8) -> i32 {
    let mut s: *mut i8 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    s = arg1;
    let _v0: *mut i8 = s;
    let _v1: i32 = parse_num(_v0);
    __retval = _v1;
    let _v2: i32 = __retval;
    return _v2;
}

fn text_len(arg0: *mut i8) -> i32 {
    let mut s: *mut i8 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    s = arg0;
    let _v0: *mut i8 = s;
    let _v1: u64 = (unsafe { strlen(_v0 as *const i8) }) as u64;
    let _v2: i32 = _v1 as i32;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut digits: [i8; 3] = [0; 3];
    let mut word: [i8; 6] = [0; 6];
    let _v0: i32 = 0;
    __retval = _v0;
    digits = [52, 50, 0];
    word = [104, 101, 108, 108, 111, 0];
    let _v1: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v2: *mut i8 = digits.as_mut_ptr() as *mut i8;
    let _v3: i32 = forward_num(_v2);
    let _v4: *mut i8 = word.as_mut_ptr() as *mut i8;
    let _v5: i32 = text_len(_v4);
    let _v6: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5) };
    let _v7: i32 = 0;
    __retval = _v7;
    let _v8: i32 = __retval;
    std::process::exit(_v8 as i32);
}
