crates/slate/tests/snapshots/struct_field_2d_array.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct cube {
    v: [[[i32; 4]; 3]; 2],
}


#[repr(C)]
#[derive(Clone, Copy)]
struct table {
    rows: [[i8; 3]; 4],
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn fill(arg4: *mut table) {
    let mut t: *mut table = std::ptr::null_mut();
    t = arg4;
    {
        let mut i: i32 = 0;
        let _v0: i32 = 0;
        i = _v0;
        loop {
            let _v1: i32 = i;
            let _v2: i32 = 4;
            let _v3: bool = _v1 < _v2;
            if !_v3 {
                break;
            }
            {
                let _v4: i32 = 97;
                let _v5: i32 = i;
                let _v6: i32 = _v4 + _v5;
                let _v7: i8 = _v6 as i8;
                let _v8: i64 = 0;
                let _v9: i32 = i;
                let _v10: i64 = _v9 as i64;
                let _v11: *mut table = t;
                unsafe {
                    (*_v11).rows[(_v10 as usize)][(_v8 as usize)] = _v7;
                }
                let _v12: i32 = 48;
                let _v13: i32 = i;
                let _v14: i32 = _v12 + _v13;
                let _v15: i8 = _v14 as i8;
                let _v16: i64 = 1;
                let _v17: i32 = i;
                let _v18: i64 = _v17 as i64;
                let _v19: *mut table = t;
                unsafe {
                    (*_v19).rows[(_v18 as usize)][(_v16 as usize)] = _v15;
                }
                let _v20: i8 = 0;
                let _v21: i64 = 2;
                let _v22: i32 = i;
                let _v23: i64 = _v22 as i64;
                let _v24: *mut table = t;
                unsafe {
                    (*_v24).rows[(_v23 as usize)][(_v21 as usize)] = _v20;
                }
            }
            let _v25: i32 = i;
            let _v26: i32 = _v25 + 1;
            i = _v26;
        }
    }
    return;
}

fn fill_via_ptr(arg2: *mut table, arg3: i32) {
    let mut t: *mut table = std::ptr::null_mut();
    let mut i: i32 = 0;
    let mut row: *mut [i8; 3] = std::ptr::null_mut();
    t = arg2;
    i = arg3;
    let _v0: *mut table = t;
    let _v1: *mut [i8; 3] = (unsafe { std::ptr::addr_of_mut!((*_v0).rows) }) as *mut [i8; 3];
    row = _v1;
    let _v2: i8 = 88;
    let _v3: i64 = 0;
    let _v4: i64 = 0;
    let _v5: *mut [i8; 3] = row;
    let _v6: i32 = i;
    let _v7: *mut [i8; 3] = unsafe { _v5.offset(_v6 as isize) };
    let _v8: *mut [i8; 3] = unsafe { _v7.add(0) };
    unsafe {
        (*_v8)[(_v3 as usize)] = _v2;
    }
    return;
}

fn fill_cube(arg1: *mut cube) {
    let mut c: *mut cube = std::ptr::null_mut();
    c = arg1;
    {
        let mut i: i32 = 0;
        let _v0: i32 = 0;
        i = _v0;
        loop {
            let _v1: i32 = i;
            let _v2: i32 = 2;
            let _v3: bool = _v1 < _v2;
            if !_v3 {
                break;
            }
            {
                {
                    let mut j: i32 = 0;
                    let _v4: i32 = 0;
                    j = _v4;
                    loop {
                        let _v5: i32 = j;
                        let _v6: i32 = 3;
                        let _v7: bool = _v5 < _v6;
                        if !_v7 {
                            break;
                        }
                        {
                            {
                                let mut k: i32 = 0;
                                let _v8: i32 = 0;
                                k = _v8;
                                loop {
                                    let _v9: i32 = k;
                                    let _v10: i32 = 4;
                                    let _v11: bool = _v9 < _v10;
                                    if !_v11 {
                                        break;
                                    }
                                    {
                                        let _v12: i32 = i;
                                        let _v13: i32 = 100;
                                        let _v14: i32 = _v12 * _v13;
                                        let _v15: i32 = j;
                                        let _v16: i32 = 10;
                                        let _v17: i32 = _v15 * _v16;
                                        let _v18: i32 = _v14 + _v17;
                                        let _v19: i32 = k;
                                        let _v20: i32 = _v18 + _v19;
                                        let _v21: i32 = k;
                                        let _v22: i64 = _v21 as i64;
                                        let _v23: i32 = j;
                                        let _v24: i64 = _v23 as i64;
                                        let _v25: i32 = i;
                                        let _v26: i64 = _v25 as i64;
                                        let _v27: *mut cube = c;
                                        unsafe {
                                            (*_v27).v[(_v26 as usize)][(_v24 as usize)][(_v22 as usize)] = _v20;
                                        }
                                    }
                                    let _v28: i32 = k;
                                    let _v29: i32 = _v28 + 1;
                                    k = _v29;
                                }
                            }
                        }
                        let _v30: i32 = j;
                        let _v31: i32 = _v30 + 1;
                        j = _v31;
                    }
                }
            }
            let _v32: i32 = i;
            let _v33: i32 = _v32 + 1;
            i = _v33;
        }
    }
    return;
}

fn sum_cube_via_ptr(arg0: *mut cube) -> i32 {
    let mut c: *mut cube = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    let mut plane: *mut [i32; 4] = std::ptr::null_mut();
    let mut total: i32 = 0;
    c = arg0;
    let _v0: i64 = 1;
    let _v1: *mut cube = c;
    let _v2: *mut [i32; 4] = (unsafe { std::ptr::addr_of_mut!((*_v1).v[(_v0 as usize)]) }) as *mut [i32; 4];
    plane = _v2;
    let _v3: i32 = 0;
    total = _v3;
    {
        let mut j: i32 = 0;
        let _v4: i32 = 0;
        j = _v4;
        loop {
            let _v5: i32 = j;
            let _v6: i32 = 3;
            let _v7: bool = _v5 < _v6;
            if !_v7 {
                break;
            }
            {
                {
                    let mut k: i32 = 0;
                    let _v8: i32 = 0;
                    k = _v8;
                    loop {
                        let _v9: i32 = k;
                        let _v10: i32 = 4;
                        let _v11: bool = _v9 < _v10;
                        if !_v11 {
                            break;
                        }
                        {
                            let _v12: i32 = k;
                            let _v13: i64 = _v12 as i64;
                            let _v14: i64 = 0;
                            let _v15: *mut [i32; 4] = plane;
                            let _v16: i32 = j;
                            let _v17: *mut [i32; 4] = unsafe { _v15.offset(_v16 as isize) };
                            let _v18: *mut [i32; 4] = unsafe { _v17.add(0) };
                            let _v19: i32 = unsafe { (*_v18)[(_v13 as usize)] };
                            let _v20: i32 = total;
                            let _v21: i32 = _v20 + _v19;
                            total = _v21;
                        }
                        let _v22: i32 = k;
                        let _v23: i32 = _v22 + 1;
                        k = _v23;
                    }
                }
            }
            let _v24: i32 = j;
            let _v25: i32 = _v24 + 1;
            j = _v25;
        }
    }
    let _v26: i32 = total;
    __retval = _v26;
    let _v27: i32 = __retval;
    return _v27;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut t: table = table { rows: [[0; 3]; 4] };
    let mut c: cube = cube { v: [[[0; 4]; 3]; 2] };
    let _v0: i32 = 0;
    __retval = _v0;
    fill(std::ptr::addr_of_mut!(t));
    let _v1: i32 = 2;
    fill_via_ptr(std::ptr::addr_of_mut!(t), _v1);
    {
        let mut i: i32 = 0;
        let _v2: i32 = 0;
        i = _v2;
        loop {
            let _v3: i32 = i;
            let _v4: i32 = 4;
            let _v5: bool = _v3 < _v4;
            if !_v5 {
                break;
            }
            {
                let _v6: *mut i8 = b"%s\n\0".as_ptr() as *mut i8;
                let _v7: i32 = i;
                let _v8: i64 = _v7 as i64;
                let _v9: *mut i8 = std::ptr::addr_of_mut!(t.rows[(_v8 as usize)]) as *mut i8;
                let _v10: i32 = unsafe { printf(_v6 as *const i8, _v9) };
            }
            let _v11: i32 = i;
            let _v12: i32 = _v11 + 1;
            i = _v12;
        }
    }
    fill_cube(std::ptr::addr_of_mut!(c));
    let _v13: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v14: i64 = 0;
    let _v15: i64 = 0;
    let _v16: i64 = 0;
    let _v17: i32 = c.v[(_v16 as usize)][(_v15 as usize)][(_v14 as usize)];
    let _v18: i64 = 3;
    let _v19: i64 = 2;
    let _v20: i64 = 1;
    let _v21: i32 = c.v[(_v20 as usize)][(_v19 as usize)][(_v18 as usize)];
    let _v22: i32 = sum_cube_via_ptr(std::ptr::addr_of_mut!(c));
    let _v23: i32 = unsafe { printf(_v13 as *const i8, _v17, _v21, _v22) };
    let _v24: i32 = 0;
    __retval = _v24;
    let _v25: i32 = __retval;
    std::process::exit(_v25 as i32);
}
