crates/slate/tests/snapshots/switch_break_inside_if.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn classify(arg0: i32, arg1: i32) -> i32 {
    let mut x: i32 = 0;
    let mut extra: i32 = 0;
    let mut __retval: i32 = 0;
    let mut result: i32 = 0;
    x = arg0;
    extra = arg1;
    let _v0: i32 = -1;
    result = _v0;
    {
        let _v1: i32 = x;
        {
            let __switch_value0 = _v1;
            let mut __switch_case0: i32 = match __switch_value0 { 0 => 0, 1 => 1, _ => 2 };
            '__switch0: loop {
                match __switch_case0 {
                    0 => {
                        {
                            let _v2: i32 = extra;
                            let _v3: bool = _v2 != 0;
                            if _v3 {
                                let _v4: i32 = 10;
                                result = _v4;
                                break '__switch0;
                            }
                        }
                        let _v5: i32 = 11;
                        result = _v5;
                        break '__switch0;
                    }
                    1 => {
                        let _v6: i32 = 20;
                        result = _v6;
                        break '__switch0;
                    }
                    2 => {
                        let _v7: i32 = -2;
                        result = _v7;
                        break '__switch0;
                    }
                    _ => {
                        break '__switch0;
                    }
                }
            }
        }
    }
    let _v8: i32 = result;
    __retval = _v8;
    let _v9: i32 = __retval;
    return _v9;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 0;
    let _v3: i32 = 1;
    let _v4: i32 = classify(_v2, _v3);
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v4) };
    let _v6: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = 0;
    let _v8: i32 = 0;
    let _v9: i32 = classify(_v7, _v8);
    let _v10: i32 = unsafe { printf(_v6 as *const i8, _v9) };
    let _v11: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v12: i32 = 1;
    let _v13: i32 = 0;
    let _v14: i32 = classify(_v12, _v13);
    let _v15: i32 = unsafe { printf(_v11 as *const i8, _v14) };
    let _v16: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v17: i32 = 5;
    let _v18: i32 = 0;
    let _v19: i32 = classify(_v17, _v18);
    let _v20: i32 = unsafe { printf(_v16 as *const i8, _v19) };
    let _v21: i32 = 0;
    __retval = _v21;
    let _v22: i32 = __retval;
    std::process::exit(_v22 as i32);
}
